# kadalu

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.adoc  README.md  build.sh  builder-requirements.txt  ci_merge-requirements.txt  ci_submit-requirements.txt  csi-requirements.txt  kadalulib.py  nginx.conf  operator-requirements.txt  requirements.txt  server-requirements.txt  setup.cfg  setup.py  utils.py
.github/: FUNDING.yml  pull_request_template.md  stale.yml
cli/: .gitignore  MANIFEST.in  Makefile  README.md  setup.py
container_images/: Dockerfile.base.moana  Dockerfile.builder  Dockerfile.csi.moana  Dockerfile.operator  Dockerfile.operator.moana  Dockerfile.server.moana
csi/: Dockerfile  Dockerfile.frombuilder  client_heal.sh  controllerserver.py  csi-requirements.txt  csi.Dockerfile  csi_pb2.py  csi_pb2_grpc.py  exporter.py  heal-info.sh  identityserver.py  main.py  nodeserver.py  quota-crawler.sh  remove_archived_pv.py  setup.py  start.py  utils.py  volumeutils.py  watch-logrotate.sh  watch-vol-changes.sh
doc/: Design.adoc  Design.md  README.adoc  README.md  block-volume.adoc  create-pvc.adoc  csi-to-claim-persistent-volumes.adoc  csi-to-claim-persistent-volumes.md  external-gluster-storage.adoc  external-gluster-storage.md  get-involved.adoc  get-involved.md  gluster-and-kadalu.adoc  gluster-and-kadalu.md  how-it-works.adoc  index.yml  introduction.adoc  k8-installation.md  mounted-block-volume.adoc  openshift-monitoring.adoc  quick-start-yaml.adoc  quick-start-yaml.md  quick-start.adoc  quick-start.md  release-management.adoc  release-management.md  running-a-webserver.adoc  running-a-webserver.md  running-minio.adoc  running-minio.md  setup-storage.adoc  setup-storage.md  setup.adoc  setup.md  storage-classes.adoc  storage-config-options.adoc  storage-config-options.md  troubleshooting.adoc  troubleshooting.md  try-kadalu.adoc  (+3 more)
examples/: elastic-search-statefulset.yaml  sample-app.yaml  sample-external-config.yaml  sample-external-kadalu-storage.yaml  sample-external-storage.yaml  sample-pvc.yaml  sample-storage-file-device.yaml  sample-storage.yaml  sample-test-app.yaml  sample-test-app1.yaml  sample-test-app2.yaml  sample-test-app3.yaml  sample-test-app4.yaml
extras/: Dockerfile.builder  Dockerfile.python-packages  Dockerfile.simple-quota-crawler  builder-requirements.txt  install.sh  kadalu-logrotate.conf  krew.yaml  quota-crawler.sh  release6-fedora.repo
kadalu_operator/: Dockerfile  exporter.py  main.py  metrics.py  start.py  supervisord.conf
krew/: kadalu.yaml
lib/: kadalulib.py
manifests/: 01-configmap.yaml.j2  02-server.yaml.j2  03-csi.yaml.j2  Replica1.client.vol.j2  Replica3.brick1.vol.j2  Replica3.client.vol.j2  csi-nodeplugin-microk8s.yaml  csi-nodeplugin-openshift.yaml  csi-nodeplugin-rke.yaml  csi-nodeplugin.yaml  csi.yaml.j2  kadalu-operator-0.1.0.yaml  kadalu-operator-0.2.0.yaml  kadalu-operator-0.3.0.yaml  kadalu-operator-0.4.0.yaml  kadalu-operator-0.5.0.yaml  kadalu-operator-0.7.0.yaml  kadalu-operator-0.7.1.yaml  kadalu-operator-devel.yaml  kadalu-operator-master-arm.yaml  kadalu-operator-master.yaml  kadalu-operator-master.yml  kadalu-operator-microk8s-0.7.1.yaml  kadalu-operator-microk8s-devel.yaml  kadalu-operator-microk8s-master.yaml  kadalu-operator-microk8s.yaml  (+20 more)
requirements/: builder-requirements.txt  ci_merge-requirements.txt  ci_submit-requirements.txt  csi-requirements.txt  operator-requirements.txt  server-requirements.txt  setup.cfg  setup.py
(+231 files in other folders)
