# Used only to generate requirements file for different components in Kadalu
[metadata]
name = Kadalu
description = Used only for generating python package requirements in various Dockerfiles under this repo
author_email = engineering@kadalu.io
url = https://github.com/kadalu/kadalu

[options]
python_requires = >=3.6

[options.extras_require]
# pip-compile --extra=builder -o extras/builder-requirements.txt --allow-unsafe
builder = pip; setuptools; prometheus-client; jinja2; requests; datetime; xxhash

# pip-compile --extra=operator -o operator/operator-requirements.txt
operator = kubernetes==11.0.0

# pip-compile --extra=csi -o csi/csi-requirements.txt
csi = googleapis-common-protos; pyxattr; grpcio

# pip-compile --extra=server -o server/server-requirements.txt
server = pyxattr

# pip-compile --extra=ci_submit -o ci_submit-requirements.txt
ci_submit = pylint; glustercli

# pip-compile --extra=ci_merge -o ci_merge-requirements.txt --allow-unsafe
ci_merge = kubernetes==11.0.0; jinja2; twine; xxhash; grpcio; pyxattr; pytest
