# Used only to generate requirements file for different components in Kadalu
[metadata]
name = Kadalu
description = Used only for generating python package requirements in various Dockerfiles under this repo
author_email = engineering@kadalu.io
url = https://github.com/kadalu/kadalu

[options]
python_requires = >=3.6

[options.extras_require]
# run "make gen-requirements" to generate all requirements files
builder = pip; setuptools; prometheus-client; jinja2; requests; datetime; xxhash
operator = kubernetes==11.0.0; fastapi; urllib3; uvicorn[standard]
csi = googleapis-common-protos; pyxattr; grpcio; fastapi; urllib3; uvicorn[standard] 
server = pyxattr
ci_submit = pylint; glustercli
ci_merge = kubernetes==11.0.0; jinja2; twine; xxhash; grpcio; pyxattr; pytest
