# Used only to generate requirements file for different components in Kadalu
[metadata]
name = Kadalu
description = Used only for generating python package requirements in various Dockerfiles under this repo
author_email = engineering@kadalu.io
url = https://github.com/kadalu/kadalu

[options]
python_requires = >=3.10

[options.extras_require]
# run "make gen-requirements" to generate all requirements files
builder = pip; setuptools; prometheus-client; jinja2; requests; datetime; xxhash; fastapi; urllib3; uvicorn[standard]
operator = kubernetes==11.0.0;
csi = googleapis-common-protos; pyxattr; grpcio;
server = pyxattr;
ci_submit = pylint; glustercli
ci_merge = kubernetes==11.0.0; jinja2; twine; xxhash; grpcio; pyxattr; pytest
